--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "guzzlehttp/guzzle": "^7.5"
     },
     "scripts": {
+        "windowShopper": "php src/Client/WindowShopping.php",
         "phpcs": "./vendor/bin/phpcs --standard=phpcs.xml.dist",
         "phpstan": "./vendor/bin/phpstan analyse -c phpstan.neon.dist --memory-limit=2G",
         "phpunit": "./vendor/bin/phpunit -c ./phpunit.xml.dist",
